添加seluth链路追踪及zipkin监控

--- a/cloud-gateway/src/main/resources/bootstrap.yml
+++ b/cloud-gateway/src/main/resources/bootstrap.yml
@@ -8,6 +8,8 @@ spring:
     active: dev
   main:
     allow-bean-definition-overriding: true
+  zipkin:
+    base-url: http://localhost:9100
   cloud:
     nacos:
       discovery:
