--- a/cloud-oauth/pom.xml
+++ b/cloud-oauth/pom.xml
@@ -58,6 +58,10 @@
       <artifactId>spring-boot-starter-data-redis</artifactId>
       <version>${spring-redis}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-zipkin</artifactId>
+    </dependency>
 
   </dependencies>
 
