--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>cloud-common</module>
     <module>cloud-security</module>
     <module>cloud-gateway</module>
+    <module>cloud-monitor</module>
     <module>cloud-provider-1</module>
     <module>cloud-oauth</module>
     <module>cloud-oauth-api</module>
@@ -36,6 +37,8 @@
     <spring-cloud-openfeign>2.2.3.RELEASE</spring-cloud-openfeign>
     <spring-oauth2>2.2.2.RELEASE</spring-oauth2>
     <spring-security>2.2.2.RELEASE</spring-security>
+    <spring-alibaba-nacos-config>2.2.3.RELEASE</spring-alibaba-nacos-config>
+    <spring-cloud-zipkin>2.2.3.RELEASE</spring-cloud-zipkin>
     <project.lombok>1.18.12</project.lombok>
     <fastjson.version>1.2.73</fastjson.version>
     <common.lang3>3.10</common.lang3>
@@ -97,12 +100,17 @@
       <dependency>
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        <version>2.2.3.RELEASE</version>
+        <version>${spring-cloud-alibaba.version}</version>
       </dependency>
       <dependency>
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        <version>2.2.3.RELEASE</version>
+        <version>${spring-cloud-alibaba.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-zipkin</artifactId>
+        <version>${spring-cloud-zipkin}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
